--- a/test.ipynb
+++ b/test.ipynb
@@ -1,122 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Azamat\\anaconda3\\envs\\deep_packet\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import multiprocessing\n",
-    "from pathlib import Path\n",
-    "import datasets\n",
-    "import numpy as np\n",
-    "import torch\n",
-    "import pandas as pd\n",
-    "from torch.nn import functional as F\n",
-    "from torch.utils.data import DataLoader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dataset_collate(batch):\n",
-    "    feature = torch.stack([torch.tensor([data['feature']]) for data in batch])\n",
-    "    label = torch.tensor([data['label'] for data in batch])\n",
-    "    transformed_batch = {\n",
-    "        'feature': feature,\n",
-    "        'label': label\n",
-    "    }\n",
-    "    return transformed_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path = 'train_test_data/application_classification/test.parquet'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Resolving data files: 100%|██████████| 200/200 [00:00<00:00, 200444.64it/s]\n",
-      "Using custom data configuration test.parquet-1bd9069ebd64a905\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset parquet/test.parquet to C:/Users/Azamat/.cache/huggingface/datasets/parquet/test.parquet-1bd9069ebd64a905/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading data files: 100%|██████████| 1/1 [00:00<00:00, 71.57it/s]\n",
-      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00,  2.56it/s]\n",
-      "                                  \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset parquet downloaded and prepared to C:/Users/Azamat/.cache/huggingface/datasets/parquet/test.parquet-1bd9069ebd64a905/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:12<00:00, 12.07s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataset_dict = datasets.load_dataset(data_path)\n",
-    "dataset = dataset_dict[list(dataset_dict.keys())[0]]     \n",
-    "dataloader = DataLoader(dataset, batch_size=4096, collate_fn=dataset_collate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataloader2 = DataLoader(dataset, batch_size=16)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,13 +19,6 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -223,7 +100,7 @@
     "traffic_conf_matrix = confusion_matrix(\n",
     "    data_path=traffic_test_data,\n",
     "    model=traffic_model,\n",
-    "    num_class=len(ID_TO_TRAFFIC)\n",
+    "    class_num=len(ID_TO_TRAFFIC)\n",
     ")\n",
     "\n",
     "traffic_labels = []\n",
