--- a/test.ipynb
+++ b/test.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Azamat\\anaconda3\\envs\\deep_packet\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from model.eval import confusion_matrix, get_classification_report, load_model\n",
     "from preprocessing.ENV import ID_TO_APP, ID_TO_TRAFFIC\n",
@@ -22,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "application_model_path = 'model/application_classification.cnn.model'\n",
-    "traffic_model_path = 'model/traffic_classification.cnn.model'\n",
+    "application_model_path = 'CNN/application_classification.cnn.model'\n",
+    "traffic_model_path = 'CNN/traffic_classification.cnn.model'\n",
     "\n",
     "# test data path\n",
     "application_test_data= 'train_test_data/application_classification/test.parquet'\n",
@@ -36,24 +45,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "application_model = load_model(model_path=application_model_path, gpu=True)\n",
-    "traffic_model = load_model(model_path=traffic_model_path, gpu=True)"
+    "application_model = load_model(model_path=application_model_path, gpu=False)\n",
+    "traffic_model = load_model(model_path=traffic_model_path, gpu=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Resolving data files: 100%|██████████| 200/200 [00:00<00:00, 200157.67it/s]\n",
+      "Using custom data configuration test.parquet-1bd9069ebd64a905\n",
+      "Found cached dataset parquet (C:/Users/Azamat/.cache/huggingface/datasets/parquet/test.parquet-1bd9069ebd64a905/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n",
+      "100%|██████████| 1/1 [00:03<00:00,  3.93s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "app_conf_matrix = confusion_matrix(\n",
     "    data_path=application_test_data,\n",
     "    model=application_model,\n",
-    "    num_class=len(ID_TO_APP)\n",
+    "    class_num=len(ID_TO_APP)\n",
     ")\n",
     "\n",
     "app_labels = []\n",
